@@ -48,7 +48,8 @@ int     colmax = 80;
 char    prompt_char = '>'; /*1 either '>' or '.'*/
 extern "C" {
 BITSET  test=(BITSET)0;
-BITSET  verbose = 1
+BITSET  verbose = Sy_bit(V_QUIET)
+                  //| Sy_bit(V_QRING) // not default, as speed drops by 10 %
                   | Sy_bit(V_REDEFINE)
                   | Sy_bit(V_LOAD_LIB)
                   | Sy_bit(V_SHOW_USE)
