@@ -4,6 +4,7 @@ Changes w.r.t 3-1-0-9:
 - new install target: install_all
   (install does not include profiling stuff any more)
 - updated: doc w.r.t. option(...)
+- new option: qringNF (track 149)
 
 Changes w.r.t 3-1-0-8:
 - 3-1-0-9: Mon Jan 25 13:47:50 CET 2010
